--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
 
 <button onclick="login()">دخول</button>
 
+<p>
+ليس لديك حساب؟  
+<a href="register.html">تسجيل جديد</a>
+</p>
+
 <p id="msg" style="color:red;"></p>
 </div>
 
 <script>
 let users = JSON.parse(localStorage.getItem("users") || "[]");
 
-// حساب المدير الأساسي إذا لم يكن موجود
+// إنشاء حساب المدير لو أول مرة
 if(users.length === 0){
-    users.push({
-        phone:"07700000000",
-        pass:"1234",
-        role:"admin"
-    });
+    users.push({ phone:"07700000000", pass:"1234", role:"admin" });
     localStorage.setItem("users", JSON.stringify(users));
 }
 
@@ -38,13 +39,13 @@ function login(){
     let user = users.find(u=>u.phone===p && u.pass===pw);
 
     if(!user){
-        msg.innerText = "بيانات غير صحيحة";
+        msg.innerText = "بيانات خاطئة";
         return;
     }
 
     localStorage.setItem("loginUser", JSON.stringify(user));
 
-    if(user.role==="admin"){
+    if(user.role === "admin"){
         window.location.href = "admin.html";
     } else {
         window.location.href = "home.html";
