--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@ body{
     box-shadow: 0 0 10px #ccc;
     text-align: center;
 }
-.main-box h2{
+.logo{
+    width: 120px;
+    height: 120px;
+    background:#ddd;
+    border-radius: 50%;
+    margin: auto;
     margin-bottom: 20px;
-    font-size: 26px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-size:20px;
+    color:#555;
 }
 .main-btn{
     width: 100%;
@@ -37,11 +46,8 @@ body{
     margin-top:10px;
     cursor:pointer;
 }
-.small-link{
-    display:block;
-    margin-top:15px;
-    font-size:16px;
-    color:#0077cc;
+.main-btn.secondary{
+    background:#0077cc;
 }
 input{
     font-size:18px !important;
@@ -53,16 +59,16 @@ input{
 <body>
 
 <div class="main-box">
-    <h2>سجل الديون</h2>
+
+    <!-- اللوغو -->
+    <div class="logo">LOGO</div>
 
     <input id="phone" placeholder="رقم الهاتف">
     <input id="pass" type="password" placeholder="كلمة المرور">
 
     <button class="main-btn" onclick="login()">تسجيل الدخول</button>
 
-    <a href="register.html" class="small-link">تسجيل مستخدم جديد</a>
-
-    <button class="main-btn" style="background:#444;" onclick="goDebt()">سجل ديون</button>
+    <button class="main-btn secondary" onclick="registerPage()">تسجيل مستخدم جديد</button>
 
     <p id="msg" style="color:red;margin-top:10px;"></p>
 </div>
@@ -114,8 +120,8 @@ function login(){
     }
 }
 
-function goDebt(){
-    window.location.href = "home.html"; 
+function registerPage(){
+    window.location.href = "register.html";
 }
 </script>
 
