--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ input{
 <div class="main-box">
 
     <!-- اللوغو -->
-    <div class="logo">LOGO</div>
+    <div class="logo">📒💸</div>
 
     <input id="phone" placeholder="رقم الهاتف">
     <input id="pass" type="password" placeholder="كلمة المرور">
