--- a/home.html
+++ b/home.html
@@ -28,10 +28,10 @@ if(!loginUser) window.location.href="index.html";
 // رقم المستخدم
 let userPhone = loginUser.phone;
 
-// جلب جميع الديون
+// جميع الديون
 let allDebts = JSON.parse(localStorage.getItem("debts") || "{}");
 
-// إنشاء قائمة فارغة لو المستخدم جديد
+// أول دخول – إنشاء قائمة فارغة
 if(!allDebts[userPhone]) allDebts[userPhone] = [];
 
 // حفظ البيانات
@@ -39,10 +39,11 @@ function save(){
     localStorage.setItem("debts", JSON.stringify(allDebts));
 }
 
-// عرض النتائج
+// عرض النتائج حسب البحث
 function render(){
     let name = searchName.value.trim();
 
+    // البحث عن الاسم
     let list = allDebts[userPhone].filter(d => 
         d.name.includes(name)
     );
@@ -57,10 +58,10 @@ function render(){
         <div style="padding:10px;border:1px solid #aaa;border-radius:8px;margin-bottom:10px;background:#fff;">
             <b>الاسم:</b> ${d.name}<br>
             <b>النوع:</b> ${d.type}<br>
-            <b>المبلغ:</b> ${d.amount}<br>
+            <b>المبلغ المتبقي:</b> ${d.amount}<br>
             <b>التاريخ:</b> ${d.date}<br><br>
 
-            <button onclick="pay(${getIndex(d)})" style="background:red;">تسديد</button>
+            <button onclick="pay(${getIndex(d)})" style="background:red;">تسديد مبلغ</button>
             <button onclick="addMore(${getIndex(d)})" style="background:orange;">إضافة مبلغ</button>
         </div>
         `;
@@ -70,7 +71,7 @@ function render(){
     total.innerText = sum;
 }
 
-// الحصول على رقم العنصر الصحيح
+// الحصول على رقم العنصر داخل المصفوفة
 function getIndex(obj){
     return allDebts[userPhone].indexOf(obj);
 }
@@ -80,16 +81,32 @@ function addMore(i){
     let d = allDebts[userPhone][i];
     let more = prompt("المبلغ المضاف:");
 
-    if(more){
+    if(more && !isNaN(more)){
         d.amount = Number(d.amount) + Number(more);
         save();
         render();
     }
 }
 
-// تسديد مبلغ (مسح الدين)
+// تسديد جزء من المبلغ
 function pay(i){
-    allDebts[userPhone].splice(i,1);
+    let d = allDebts[userPhone][i];
+    let amt = prompt("أدخل مبلغ التسديد:");
+
+    if(amt === null || amt === "" || isNaN(amt)) return;
+
+    amt = Number(amt);
+
+    if(amt <= 0) return;
+
+    if(amt >= d.amount){
+        // تم تسديد الدين كامل → حذف
+        allDebts[userPhone].splice(i,1);
+    } else {
+        // تسديد جزئي
+        d.amount = d.amount - amt;
+    }
+
     save();
     render();
 }
